updated Italian translation

--- a/po/wesnoth-help/it.po
+++ b/po/wesnoth-help/it.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-09-01 18:47+0200\n"
-"PO-Revision-Date: 2012-09-22 11:56+0100\n"
+"PO-Revision-Date: 2012-10-14 09:51+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -834,7 +834,7 @@ msgstr ""
 "Wesnoth. É limitata a sud (fuori mappa) da fitti boschi. La foresta di "
 "Aethen può essere considerata la parte settentrionale di questi boschi.\n"
 "\n"
-"    • Città di rilievo:\n"
+"    • Città principali:\n"
 "          ◦ Weldyn: la capitale di Wesnoth.\n"
 "          ◦ Aldril: città situata nella Baia delle Perle.\n"
 "          ◦ Port Acquacupa: città situata a sud della Baia delle Perle.\n"
@@ -849,8 +849,8 @@ msgstr ""
 "il controllo sulle terre selvagge intorno alla parte orientale delle colline "
 "Marroni e a nord del guado di Abez.\n"
 "\n"
-"    • Particolarità del territorio degne di nota:\n"
-"          ◦ Mongrifone: casa dei favolosi grifoni\n"
+"    • Principali zone di interesse:\n"
+"          ◦ Mongrifone: casa dei mitici grifoni\n"
 "          ◦ Guado di Abez: zona del Grande Fiume con acque basse, di solito "
 "è controllata dalle forze di Wesnoth.\n"
 "          ◦ Fiume Weldyn: si separa dal Grande Fiume e prosegue il suo corso "
@@ -911,11 +911,11 @@ msgstr ""
 "l’<ref>dst='great_ocean' text='oceano'</ref> ad ovest. Maggiori informazioni "
 "possono essere trovate nella storia di Wesnoth.\n"
 "\n"
-"    • Città degne di nota:\n"
+"    • Città principali:\n"
 "          ◦ Elensefar: La capitale, locata su un’isola nel delta del "
 "<ref>dst='great_river' text='Grande Fiume'</ref>\n"
 "          ◦ Carcyn: Città al confine Wesnoth–Elensefar, contesa con Wesnoth\n"
-"    • Caratteristiche del terreno degne di nota:\n"
+"    • Principali zone di interesse:\n"
 "          ◦ <ref>dst='great_river' text='Grande fiume'</ref>: È molto largo "
 "in questo punto, e solo le navi possono attraversarlo."
 
@@ -973,7 +973,7 @@ msgstr ""
 "ref>, e quello ovest è il <ref>dst='great_ocean' text='Grande Oceano'</"
 "ref>.\n"
 "\n"
-"    • Città degne di nota:\n"
+"    • Città principali:\n"
 "          ◦ Glamdrol: Capitale di una tribù di un clan di orchi\n"
 "          ◦ Romyr: Capitale di un altro clan\n"
 "          ◦ Wesmere: Il luogo del Ka’lian — il concilio degli elfi\n"
@@ -985,7 +985,7 @@ msgstr ""
 "questi villaggi si trovavano, fu chiamata la provincia di Annuvin dagli "
 "uomini ma era conosciuta dagli elfi come Wesmere.\n"
 "\n"
-"    • Caratteristiche del terreno degne di nota:\n"
+"    • Principali zone di interesse:\n"
 "          ◦ Massiccio centrali: una barriera virtualmente insormontabile tra "
 "le terre del fiume e le pianure del nord.\n"
 "          ◦ Artigli del Cuore: la particolarmente proibitiva zona a sud-"
@@ -1031,9 +1031,9 @@ msgstr ""
 "confini sono le Paludi Verdi a nord-est, il deserto (non mostrato) a sud e "
 "l’ <ref>dst='great_ocean' text='Oceano'</ref> a ovest.\n"
 "\n"
-" • Città importanti\n"
+"    • Città principali\n"
 "          ◦ Sconosciute\n"
-"    • Tratti di terra importanti:\n"
+"    • Principali zone di interesse:\n"
 "          ◦ Foresta di Aethen: la più grande foresta meridionale , che si "
 "estende nell’estremo sud-ovest (ancora più lontana da dove è segnata) e casa "
 "degli  <ref>dst='..race_elf' text='elfi'</ref>."
@@ -1191,7 +1191,6 @@ msgstr "Comandi"
 
 #. [topic]: id=..units
 #: data/core/help.cfg:91
-#, fuzzy
 msgid ""
 "This section will list all the units you discover as you explore the world "
 "of Wesnoth. When you see a new unit during a campaign or multiplayer "
@@ -1204,9 +1203,9 @@ msgstr ""
 "da parte tua procede l’esplorazione del mondo di Wesnoth. Quando vedi per la "
 "prima volta all’interno di una campagna o di uno scenario multigiocatore una "
 "nuova unità, essa verrà aggiunta nella sezione appropriata per la sua razza. "
-"A questo punto potrai vedere le informazioni di una unità ogni volta che lo "
-"desideri. La pagina di una unità fornisce una sua descrizione generale, le "
-"sue statistiche, gli attacchi, i coefficienti di resistenza, movimento e "
+"A questo punto potrai vedere le informazioni di questa unità ogni volta che "
+"lo desideri. La pagina di una unità fornisce una sua descrizione generale, "
+"le sue statistiche, gli attacchi, i coefficienti di resistenza, movimento e "
 "difesa.\n"
 "\n"
 
@@ -3534,6 +3533,11 @@ msgid ""
 "offer.\n"
 "\n"
 msgstr ""
+"L’estensibilità di Wesnoth permette alla fiorente comunità degli utenti di "
+"sviluppare contenuti utilizzando tutte le potenzialità offerte dal motore "
+"del gioco per sviluppare nuovi scenari, campagne e molto di più di quanto "
+"possano offrire i pacchetti ufficiali.\n"
+"\n"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:804
@@ -3580,7 +3584,6 @@ msgstr ""
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:809
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -3601,6 +3604,12 @@ msgid ""
 "packs providing sets of individual multiplayer scenarios not connected in "
 "the form of a campaign."
 msgstr ""
+"\n"
+"\n"
+"Partite <italic>text='multigiocatore'</italic> possono essere giocate con "
+"scenari completamente modificati, scriptati e persino con campagne disegnate "
+"ad hoc. Ci sono anche pacchetti che forniscono un insieme di scenari "
+"multigiocatore non organizzati sotto forma di campagna."
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:813
@@ -3679,7 +3688,6 @@ msgstr "Installare le estensioni"
 
 #. [topic]: id=installing_addons
 #: data/core/help.cfg:831
-#, fuzzy
 msgid ""
 "User-made add-ons can be obtained and updated through the <italic>text='Add-"
 "ons'</italic> option in the main menu. After connecting to the add-ons "
@@ -3704,7 +3712,29 @@ msgid ""
 "available languages."
 msgstr ""
 "Le estensioni create dagli utenti possono essere ottenute e mantenute "
-"aggiornate tramite "
+"aggiornate tramite l’opzione <italic>text='Estensioni'</italic> del menù "
+"principale. Dopo la connessione al server delle estensioni (per default "
+"<italic>text='add-ons.wesnoth.org'</italic>), verrà presentata una lista "
+"delle estensioni disponibili sul server per essere scaricate.\n"
+"\n"
+"Sotto ognuna di esse è mostrato lo stato di installazione di ognuna di esse. "
+"Per le estensioni contrassegnate sul server con  "
+"<italic>text='aggiornabile'</italic> o <italic>text='obsoleta'</italic>, "
+"nella colonna <italic>text='Versione'</italic> verrà mostrata sia la "
+"versione installata localmente che la versione remota disponibile.\n"
+"\n"
+"Per cercare una estensione tramite parole chiavi, digitale in un ordine "
+"qualsiasi e separate da degli spazi nella casella <bold>text='Filtro'</"
+"bold>. Puoi anche ordinare le estensioni cliccando sulle intestazioni delle "
+"singole colonne. É anche possibile scegliere di visualizzare soltanto le "
+"estensioni di una specifica categoria cliccando sul bottone "
+"<bold>text='Opzioni'</bold> nell’angolo in alto a destra.\n"
+"\n"
+"Per installare una estensione, selezionala dalla lista e clicca sul bottone "
+"<bold>text='OK'</bold>, o più semplicemente fai un doppio click sul titolo "
+"dell’estensione stessa. Il bottone <bold>text='Descrizione'</bold> mostrerà "
+"dettagli aggiuntivi sull’estensione stessa, quali la sua descrizione "
+"completa, lo stato di installazione e le traduzioni disponibili. "
 
 #. [topic]: id=removing_addons
 #: data/core/help.cfg:844
@@ -3723,6 +3753,16 @@ msgid ""
 "accidental loss. Instead, you have to manually delete the information files "
 "or the add-ons themselves using your platform’s facilities."
 msgstr ""
+"Per rimuovere una estensione, seleziona <bold>text='Rimuovi estensioni'</"
+"bold> nella finestra di dialogo della connessione al server delle "
+"estensioni. Ti saranno mostrate le opzioni per rimuovere una o più delle "
+"estensioni che hai attualmente installato.\n"
+"\n"
+"Questa modalità non è in grado di rimuovere estensioni alle quali siano "
+"associate delle informazioni di pubblicazione ( files <italic>text='.pbl'</"
+"italic>), in modo da evitare una possibile rimozione accidentale. Per "
+"rimuoverle, devi cancellare manualmente i files di informazione o le "
+"estensioni stesse agendo sulla tua installazione locale. "
 
 #. [topic]: id=general_commands
 #: data/core/help.cfg:860
@@ -6278,7 +6318,6 @@ msgid "Vision: "
 msgstr "Visione:"
 
 #: src/help.cpp:1453
-#, fuzzy
 msgid "Jamming: "
 msgstr "Jamming: "
 
@@ -6348,11 +6387,11 @@ msgstr "Costo di movimento"
 
 #: src/help.cpp:1584
 msgid "Vision Cost"
-msgstr ""
+msgstr "Costo della Visione"
 
 #: src/help.cpp:1586
 msgid "Jamming Cost"
-msgstr ""
+msgstr "Costo del Jamming:"
 
 #: src/help.cpp:1852
 msgid "<header>text='Units of this race'</header>"
