--- a/po/wesnoth-l/it.po
+++ b/po/wesnoth-l/it.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-01-29 23:06+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-10-21 11:46+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1057,6 +1057,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:324
 msgid "Could not convert a $stored_changers[$i].type, please report!"
 msgstr ""
+"Non posso convertire un $stored_changers[$i].type, si prega di notificare!"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:590
