--- a/po/wesnoth-manual/uk.po
+++ b/po/wesnoth-manual/uk.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 1.10\n"
-"POT-Creation-Date: 2012-08-18 09:51+0300\n"
+"POT-Creation-Date: 2012-09-01 18:47+0300\n"
 "PO-Revision-Date: 2012-08-25 12:28+0100\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: none\n"
@@ -3228,7 +3228,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:2267
 msgid "Orb"
-msgstr "Чфера"
+msgstr "Сфера"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:2273
