--- a/po/wesnoth-utbs/gl.po
+++ b/po/wesnoth-utbs/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-10-07 14:34+0200\n"
+"PO-Revision-Date: 2012-10-27 18:51+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -118,6 +118,8 @@ msgstr "E especialmente grazas a todos aqueles aos que esquecín mencionar."
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:181
 msgid "stunned: This unit is stunned. It cannot enforce its Zone of Control."
 msgstr ""
+"Atordado: esta unidade está atordada, e non pode exercer a súa zona de "
+"control."
 
 #. [scenario]: id=01_The_Morning_After
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:5
