--- a/po/wesnoth-httt/gl.po
+++ b/po/wesnoth-httt/gl.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-09-22 12:17+0200\n"
+"PO-Revision-Date: 2012-10-27 18:29+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -380,12 +380,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:282
-#, fuzzy
-#| msgid ""
-#| "We will go north. Perhaps we can reach the Isle of Alduin. If we can make "
-#| "it there, surely we will be safe. Konrad, we must recruit some elves to "
-#| "help us, and then you must make it to the sign post in the north-west. I "
-#| "will protect you!"
 msgid ""
 "We will go north. Perhaps we can reach the Isle of Alduin. If we can make it "
 "there, surely we will be safe. Konrad, we must recruit some elves to help "
@@ -393,8 +387,9 @@ msgid ""
 "protect you!"
 msgstr ""
 "Dirixirémonos ao norte. Ao mellor conseguimos chegar á Illa de Alduin, alí "
-"estaremos a salvo. Conrad, recruta algúns elfos para que nos axuden, e "
-"despois vai ata o sinal que hai ao noroeste de aquí. Eu te protexerei!"
+"estaremos a salvo. Conrad, debemos recrutar algúns elfos para que nos "
+"axuden, e despois debes ir ata o sinal que hai ao noroeste de aquí. Eu te "
+"protexerei!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:286
