--- a/po/wesnoth-tutorial/gl.po
+++ b/po/wesnoth-tutorial/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 15:56+0200\n"
-"PO-Revision-Date: 2012-09-22 09:05+0200\n"
+"PO-Revision-Date: 2012-10-27 18:50+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -831,16 +831,12 @@ msgstr "Rematar o escenario"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1144
-#, fuzzy
-#| msgid ""
-#| "Do you want to keep practicing? You can complete this scenario at any "
-#| "time using the right click."
 msgid ""
 "Do you want to keep practicing? You can end this scenario at any time by "
 "using the <b>End Scenario</b> item in the context menu."
 msgstr ""
-"Queres seguir practicando? Podes completar o escenario en calquera momento "
-"premendo o botón secundario."
+"Queres seguir practicando? Podes saír do escenario en calquera momento "
+"premendo o botón <b>Finalizar</b> do menú contextual."
 
 #. [option]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1146
