--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-10-06 16:10+0200\n"
+"PO-Revision-Date: 2012-10-27 18:53+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -542,10 +542,8 @@ msgstr "Tradución ao ruso"
 
 #. [about]
 #: data/core/about.cfg:2574
-#, fuzzy
-#| msgid "Galician Translation"
 msgid "Scottish Gaelic Translation"
-msgstr "Tradución ao galego"
+msgstr "Tradución ao gaélico escocés"
 
 #. [about]
 #: data/core/about.cfg:2583
