Updated the Latin translation.

--- a/po/wesnoth-l/la.po
+++ b/po/wesnoth-l/la.po
@@ -1530,16 +1530,18 @@ msgid ""
 "Send your men with us. They will be valuable help as we prepare for the "
 "assault from the Wesnoth army garrison."
 msgstr ""
+"Mittite suos nobiscum. Utilissimi expeditioni procul castello exercitus "
+"Vesnotiensis erint."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:396
 msgid "Done. My finest mages and thieves are at your disposal. Use them well."
-msgstr ""
+msgstr "Dictum et factum. Optimi de magis meis tibi sunt. Bene eos utere."
 
 #. [option]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:411
 msgid "I wish you to join us in battle against the Queen’s forces."
-msgstr ""
+msgstr "Te nobiscum pro proelio in copias Reginae coniungere volo."
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:415
@@ -1548,11 +1550,13 @@ msgid ""
 "countryside. We will be ready to march in seven days. All now hinges on you! "
 "Until then..."
 msgstr ""
+"Bene. Amabo da mihi spatium ut silva purgata meos ex rure revocem. Parati "
+"septem diebus ad iter faciendum erimus. Nunc omnia ex te pendunt!"
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:465
 msgid "My men... have failed to protect me! I perish..."
-msgstr ""
+msgstr "Mei... in defensioni mei defuerunt! Pereo..."
 
 #. [scenario]: id=07_The_Hunters
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:4
@@ -1565,6 +1569,8 @@ msgid ""
 "Baldras and his men quickly left the Grey Woods, not entirely convinced of "
 "their safety even after eradicating the lich."
 msgstr ""
+"Baldras suique cito Silva Livida abeunt, nec etiam post mortifugam deletam "
+"omnino salutatis certi."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:27
@@ -1574,6 +1580,9 @@ msgid ""
 "them. The ascent of the Queen had cast an uneasy pall over the citizens of "
 "Wesnoth, and some of them were willing to resist it."
 msgstr ""
+"Ut pergebant, multi homines mulieresque se ex viculis parvis per Carcinem et "
+"Silam Lividam dispersis rogabant, ut secum coniungant; ascensum Reginae "
+"nubem tristem civibus Vesnotei ponisse, ac quosdem esse qui resistant."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:30
@@ -1582,6 +1591,8 @@ msgid ""
 "help.\n"
 "<b>Note:</b> Baldras is now able to recruit Outlaws."
 msgstr ""
+"Quamquam sciebant se sceleres appellari, Baldras invitus illos accepit.\n"
+"<b>Nota bene:</b> Baldras nunc Profugos adlegere potest."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:34
@@ -1591,6 +1602,9 @@ msgid ""
 "to the northwest. Unsure what to make of it, they debated their next course "
 "of action..."
 msgstr ""
+"Tacite, castris suis in extrema silva positis, motum multarum copiarum, quae "
+"ex Aldrile, urbe vicina, venerant, ad aquilonem et occidentem euntium "
+"inspexerunt. Quia nesciebant quid erat, deliberarverunt quid faciant..."
 
 #. [side]: type=Royal Guard, id=Archarel
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:58
@@ -1625,6 +1639,9 @@ msgid ""
 "of Wesnoth. Idiocy! If the noble lord of Elensefar is unwilling to resist "
 "the Queen, how should I ever expect to?"
 msgstr ""
+"Verba Domini Madocii me presserunt. Mihi viditur nos nusquam vincere posse; "
+"nam numquam totum exercitum Vesnotei vincemus. Quam stultum! Si dominus "
+"Ellensepharis honestus Reginae resistere nolet, quomodo ego speram?"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:158
@@ -1633,6 +1650,8 @@ msgid ""
 "platoons of heavy infantry marching towards the garrison in just the last "
 "two hours."
 msgstr ""
+"Quod peior est, illa nos cognoscere viditur. Quinque cohortes peditum ad "
+"castellum euntes tantum duobus horis numeravimus."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:162
@@ -1641,6 +1660,9 @@ msgid ""
 "are a fortress. They used to protect this area from the enemies of Wesnoth; "
 "I never imagined they would house its enemies."
 msgstr ""
+"Castellum. Turres Halmoenis magis sunt quam unum castellum, fili sororis; "
+"namque arx sunt. Hanc regionem ab hostibus Vesnotei custodire solebant; "
+"numquam fingebam illa hostes eius continere."
 
 #. [event]: id=Pitcher 20 14}, id=Pitcher 28 18}, id=Pitcher 20 14}
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:165
@@ -1660,7 +1682,7 @@ msgstr "Avuncule, insigne Ellensium gerit. Respondere debemus."
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:180
 msgid "Rider, hush before we are discovered! Come to us, but quietly!"
-msgstr ""
+msgstr "Eques, sile ne reperiamur! Veni, at tacite!"
 
 #. [message]: speaker=Pitcher
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:187
@@ -1669,11 +1691,14 @@ msgid ""
 "patrols have again ventured across the Great River into Annuvin. A woman "
 "named Relana opposed them with a small militia. She was victorious."
 msgstr ""
+"Baldras, nuntia ex septentrione refero. Paucie ante diebus, multi circitores "
+"trans Magnum Flumen in Annuviniam ire ausi sunt. Quaedam mulier, Relana "
+"nomine, in obviam cum parva copia iit. Illa vicit."
 
 #. [message]: speaker=Majel
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:191
 msgid "This is surely good news!"
-msgstr ""
+msgstr "Nonne nuntium bonum est?"
 
 #. [message]: speaker=Pitcher
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:195
@@ -1682,6 +1707,8 @@ msgid ""
 "directly from Weldyn. As soon as they arrive, they will burn every village "
 "to the ground. No one will live."
 msgstr ""
+"Malum est. Regina partem ex legionibus propioribus recta ab Veldine mittit. "
+"Simulatque pervenerint, omnes viculos radicitus urentur. Nemo vivabit."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:199
@@ -1691,11 +1718,15 @@ msgid ""
 "They mustn’t take one step without us being there to harass and delay them. "
 "When they reach Halstead they must be exhausted or dying."
 msgstr ""
+"Omnes motus copiarum nunc ad cognoscendum in aperto sunt. Necesse est "
+"impedire ne castrum attingant. Vorare non possumus, sed saltem arrodere. "
+"Illis non una uncia licet nisi nos ante pedes ad vexandum ac tardandum "
+"sumus. Cum Halmoenem attigerint defessi aut morientes simus."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:203
 msgid "You just said we can’t beat their entire army!"
-msgstr ""
+msgstr "At modo dixisti nos omnes superare non posse!"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:207
@@ -1703,6 +1734,8 @@ msgid ""
 "Do you propose surrender? It’s this or nothing. All we can do is see it "
 "through to the end."
 msgstr ""
+"Putesne nos se dedere? Hoc faciamus aut nihil. Modo pergere ad finem "
+"possumus."
 
 #. [message]: speaker=Pitcher
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:211
@@ -1710,11 +1743,13 @@ msgid ""
 "May you prevail in peace and war. I must depart before I am seen so far from "
 "my Lord’s borders."
 msgstr ""
+"Valeas domo belloque. Ire debeo priusquam tam procul a finibus ipsius "
+"observor."
 
 #. [message]: speaker=Jingo
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:222
 msgid "Another platoon approaches..."
-msgstr ""
+msgstr "Alia ala appropinquat..."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:274
@@ -1723,11 +1758,14 @@ msgid ""
 "the army of the usurper. Strike fast, strike silently... and leave no one "
 "alive."
 msgstr ""
+"Cum proelium finiverimus, nemo vias apertas noctemque caelumque timebit "
+"magis quam exercitus praedonis. Ferite cito, ferite tacite... et nullum "
+"vivum linquete."
 
 #. [message]: speaker=Linneus
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:288
 msgid "It’s an ambush! Hold your ground!"
-msgstr ""
+msgstr "Insidiati sumus! Firmos manete!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:299
@@ -1736,6 +1774,8 @@ msgid ""
 "They were surprised to see their fellow soldiers engaged in combat with the "
 "band of thugs of which they had heard so much."
 msgstr ""
+"Vigiles vicini, postridie mane, ad stationem proximam redierunt.Mirabantur, "
+"cum contubernales adversus manum latronum famosam pugnantes viderint."
 
 #. [message]: speaker=Archarel
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:307
@@ -1743,6 +1783,8 @@ msgid ""
 "Troops, to arms! These peasant scum think they are above the law. We will "
 "show them the law!"
 msgstr ""
+"Vires, ad arma! Isti rustici scelrati putant se iurem effugere posse. De "
+"iurerespondebimus!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:324
@@ -1757,6 +1799,10 @@ msgid ""
 "people may have a chance. Rest well tonight, because tomorrow’s battle will "
 "decide the fate of our homes, our families, and our freedom."
 msgstr ""
+"Quam crueta caedes. Nunc ad Halmoenem pugnandum est. Si moremur, illi "
+"invicti fiant. Si totum urere possimus priusquam accidit, fortasse gens "
+"nostra superstabunt. Bene dormite hac nocte, nam ex proelio psotridie pendet "
+"fortuna vitarum nostrum et domuum et libertatis."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:355
@@ -1764,6 +1810,8 @@ msgid ""
 "Send word to Helicrom that we are ready. It is time for him to repay his "
 "debt."
 msgstr ""
+"Helicromum certiorem fac nos paratos esse. Nunc sibi ad debitum reddendum "
+"est."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:376
@@ -1771,6 +1819,8 @@ msgid ""
 "We have spent too much time here. Surely the entire Wesnoth army marches on "
 "our position. We are done for!"
 msgstr ""
+"Tamdiu hic morati sumus. Nonne totus exercitus Vesnotei hinc iter faciunt. "
+"Vae nobis!"
 
 #. [scenario]: id=08_Glory
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:4
@@ -1838,12 +1888,12 @@ msgstr "Vasna"
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:386
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:599
 msgid "Destroy the stronghold of Halstead"
-msgstr "Castellum Halmoenis delere"
+msgstr "Arcem Halmoenis delere"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:424
 msgid "There it is. The stronghold of Halstead."
-msgstr "Eccillud: castellum Halmoenis."
+msgstr "Eccillam: arcem Halmoenis."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:437
@@ -1976,7 +2026,7 @@ msgstr ""
 #. [unit]: type=Paladin, id=Sir Gwydion
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:555
 msgid "Sir Gwydion"
-msgstr "Dominus Guidion"
+msgstr "Dominus Guidius"
 
 #. [message]: type=Lancer
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:570
@@ -2137,7 +2187,7 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:1048
 msgid "Your reign of terror is over, General."
-msgstr ""
+msgstr "Regnum terroris tui finitus est, Legate."
 
 #. [message]: speaker=Dommel
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:1053
