--- a/po/wesnoth-httt/la.po
+++ b/po/wesnoth-httt/la.po
@@ -6762,16 +6762,12 @@ msgstr ""
 
 #. [message]: speaker=Parandra
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Princess, when Delfador the Great speaks of the Queen Mother, Asheviere, "
-#| "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgid ""
 "Princess, when Delfador the Great speaks of the Queen Dowager, Asheviere, "
 "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgstr ""
-"Filia Reginae, cum Delfador Magnus de Matre Regina Ascuera iubente regulos "
-"Vesnotei interfecti dicat, vera dicit."
+"Filia Reginae, cum Delfador Magnus de Regina Ascuera iubente regulos "
+"Vesnotei interfecti dicit, vera dicit."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:159
@@ -6792,20 +6788,14 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:173
-#, fuzzy
-#| msgid ""
-#| "Well, that is why I must take the Sceptre. I will return, and people will "
-#| "accept me as Queen. I will rule justly and fairly. My mother is only "
-#| "Queen Mother. The throne is rightfully mine, and with the Sceptre I can "
-#| "prove it."
 msgid ""
 "Well, that is why I must take the Sceptre. I will return, and people will "
 "accept me as Queen. I will rule justly and fairly. My mother is only Queen "
 "Dowager. The throne is rightfully mine, and with the Sceptre I can prove it."
 msgstr ""
-"Quo facto Sceptrum capere debeo. Reveniam et populus me ut reginam accipet. "
-"Iuste recteque regnabo. Mater solum Regina Mater est. Solium iuste mihi est, "
-"et cum Sceptro demonstrare possum."
+"Quo facto Sceptrum capere debeo. Reveniam et populus me ut reginam accipiet. "
+"Iuste recteque regnabo. Mater solum Regina brevis est. Solium iuste mihi "
+"est, et cum Sceptro demonstrare possum."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:177
@@ -6818,21 +6808,15 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:183
-#, fuzzy
-#| msgid ""
-#| "Well, I have the Sceptre! I will return and the people will accept me as "
-#| "Queen! My mother is only Queen Mother. The Throne is rightfully mine, and "
-#| "I will rule from it with justice and fairness. I may even accept you as "
-#| "my adviser and counselor, Delfador."
 msgid ""
 "Well, I have the Sceptre! I will return and the people will accept me as "
 "Queen! My mother is only Queen Dowager. The Throne is rightfully mine, and I "
 "will rule from it with justice and fairness. I may even accept you as my "
 "adviser and counselor, Delfador."
 msgstr ""
-"Sceptrum habeo! Reveniam et populus me ut Reginam accipet! Mater modo Regina "
-"Mater est. Solium, ex quo iuste recteque regnabo, legitime mihi est. Te "
-"fortasse ut suasorem et consillarium accipiam, Delfador."
+"Ego sceptrum habeo! Reveniam et populus me ut Reginam accipet! Mater modo "
+"Regina brevis est. Solium, ex quo iuste recteque regnabo, legitime mihi est. "
+"Te fortasse ut suasorem et consillarium accipiam, Delfador."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:187
@@ -8749,6 +8733,5 @@ msgstr ""
 #~ msgid "impact"
 #~ msgstr "incussus"
 
-#, fuzzy
 #~ msgid "arcane"
-#~ msgstr "Tarcinus"
+#~ msgstr "arcanum"
