updated Italian translation

--- a/po/wesnoth-httt/it.po
+++ b/po/wesnoth-httt/it.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-01-27 22:39+0100\n"
-"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-10-28 09:33+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -365,12 +365,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:281
-#, fuzzy
-#| msgid ""
-#| "We will go north. Perhaps we can reach the Isle of Alduin. If we can make "
-#| "it there, surely we will be safe. Konrad, we must recruit some elves to "
-#| "help us, and then you must make it to the sign post in the north-west. I "
-#| "will protect you!"
 msgid ""
 "We will go north. Perhaps we can reach the Isle of Alduin. If we can make it "
 "there, surely we will be safe. Konrad, we must recruit some elves to help "
@@ -378,9 +372,9 @@ msgid ""
 "protect you!"
 msgstr ""
 "Andremo a nord. Forse possiamo raggiungere l’Isola di Alduin. Se riusciamo "
-"ad arrivare fin lì saremo al sicuro. Konrad, dobbiamo reclutare alcuni elfi "
-"per aiutarci, e poi dovrai arrivare fino al cartello posto a nord-ovest. Ti "
-"proteggerò io!"
+"ad arrivare fin lì saremo certamente al sicuro. Konrad, dobbiamo reclutare "
+"alcuni elfi perché ci aiutino, e poi dovrai arrivare fino al cartello posto "
+"a nord-ovest. Ti proteggerò io!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:285
