updated German translation

--- a/po/wesnoth-httt/de.po
+++ b/po/wesnoth-httt/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.9\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2011-11-30 14:11+0100\n"
+"PO-Revision-Date: 2012-10-28 17:36+0100\n"
 "Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de <>\n"
 "Language: \n"
@@ -365,12 +365,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:281
-#, fuzzy
-#| msgid ""
-#| "We will go north. Perhaps we can reach the Isle of Alduin. If we can make "
-#| "it there, surely we will be safe. Konrad, we must recruit some elves to "
-#| "help us, and then you must make it to the sign post in the north-west. I "
-#| "will protect you!"
 msgid ""
 "We will go north. Perhaps we can reach the Isle of Alduin. If we can make it "
 "there, surely we will be safe. Konrad, we must recruit some elves to help "
@@ -380,7 +374,8 @@ msgstr ""
 "Wir werden nach Norden gehen. Sollten wir die Insel Alduin erreichen, sind "
 "wir bestimmt in Sicherheit. Wir brauchen einige Elfen, die uns begleiten, "
 "Konrad. Eile in der Wahl deiner Begleiter, sonst werden die Orks den Weg "
-"nach Nordwesten versperrt haben."
+"nach Nordwesten versperrt haben. Egal was passiert, versuch den Wegweiser zu "
+"erreichen. Ich werde dich so gut als möglich schützen."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:285
